category controller updated
